--- a/auth/package.json
+++ b/auth/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "google-auth-library": "^7.1.0",
+    "googleapis": "^39.2.0",
     "open": "^8.2.0",
     "server-destroy": "^1.0.1"
   }
